# wordcount

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: char.rs  line.rs
tests/utils/: mod.rs
