[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
authors = ["ando <roid.saa@gmail.com>"]
edition = "2018"
license = "MIT OR Apatch-2.0"
description = "シンプルな文字、単号、行の出力頻度の計数機能を提供します。"
readme = "README.md"
repository = "https://github.com/roidsaa/wordcount"
keywords = ["example", "frequency", "text"]

[badges]
appveyor = { repository = "roidsaa/wordcount" }
travis-ci = { repository = "roidsaa/wordcount" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"